--- a/BoardWeb/pom.xml
+++ b/BoardWeb/pom.xml
@@ -64,6 +64,22 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.5.7</version>
 		</dependency>
+		<!--아파치 타일즈관련 디펜던시-->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-extras</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-servlet</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>3.0.8</version>
+		</dependency>
 	</dependencies>
 
 </project>
